hphp/test/zend/bad/zend/ns_029.php
<?php
use A\B as Foo;

class Foo {
}

new Foo();