hphp/test/zend/bad/zend/ns_029.php.exp
HipHop Fatal error: Cannot declare class Foo because the name is already in use in %sns_029.php on line 4
